--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
 <head>
     <title>minha pagina</title>
+    <style>
+        p {
+            color: cornflowerblue;
+            background-color: black;
+           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        h1 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: aqua;
+        }
+        </style>
 </head>
 <body>
     <h1>minha pagina de estudo</h1>
