--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
             color: cornflowerblue;
             background-color: black;
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+        }.
 
         h1 {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: aqua;
         }
         </style>
+        <script>
+            document.write("ola mundo, javaScript!");
+        </script>
 </head>
 <body>
     <h1>minha pagina de estudo</h1>
